# PulseStream-AI

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  powerbi.pbix  pyproject.toml
airflow/dags/: model_training_dag.py  pulsestream_ai_dag.py
api/: Dockerfile  fastapi_app.py  main.py  requirements.txt
api/data/: articles_meta.csv
api/model/: article_model.py  auth_model.py  tfidf_matrix.pkl  vectorizer.pkl
api/router/: auth_router.py  tasks_router.py
api/utils/: database.py  email_utils.py  feedback_handler.py  jwt_handler.py  main.py  password_hashing.py  pyproject.toml  snowflake_conn.py
consumers/: news_consumer.py
docker/: docker-compose.yml
docker/airflow_data/: airflow.cfg
docker/data_ingestion_test/: data_ingestion.ipynb
docker/postgres_data/: postmaster.pid
docker/postgres_data/base/1/: 13323  2619
docker/postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
docker/postgres_data/pg_stat/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
docker/postgres_data/pg_stat_tmp/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
docker/postgres_data/pg_xact/: 0000
ingestion/: news_producer.py
loaders/: snowflake_loader.py
migrations/: env.py
migrations/versions/: 94b9295cb8e8_create_users_table.py
producers/: news_producer.py
pulse_dbt/: .user.yml  dbt_project.yml
pulse_dbt/models/: src.yml
pulse_dbt/models/example/: schema.yml
pulse_dbt/models/marts/: dim_topics.sql  fact_article_features.sql  fact_user_activity.sql
pulse_dbt/models/staging/: stg_news_raw.sql
(+192 files in other folders)
