[project]
name = "pulsestream-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.12.0",
    "api>=0.0.7",
    "fastapi>=0.119.0",
    "kafka-python>=2.2.15",
    "langdetect>=1.0.9",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "snowflake-connector-python[pandas]>=4.0.0",
    "textblob>=0.19.0",
    "uvicorn>=0.37.0",
]
